# hNMF

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
docs/: 404.html  index.html  make.bat  objects.inv
docs/_static/: documentation_options.js
docs/api/: index.html
docs/search/: search_index.json
docs/source/: conf.py  hnmf.rst  index.rst
docs_/: build_docs.bat  postprocess.py
docs_/source/: conf.py  hnmf.rst  index.rst
docs_src/: api.md  index.md
hNMF/: __init__.py  helpers.py  model.py
hnmf/: __init__.py  helpers.py  hnmf.py  model.py  progress_tree.py  signatures.py
src/hnmf/: __init__.py  helpers.py  model.py  progress_tree.py  signatures.py
tests/: test_hnmf.py
